tests/ui/traits/const-traits/const-traits-core.stderr
error[E0277]: the trait bound `(): const Clone` is not satisfied
  --> $DIR/const-traits-core.rs:47:29
   |
LL | const UNIT_CLONE: () = UNIT.clone();
   |                             ^^^^^

error[E0277]: the trait bound `Char: const Clone` is not satisfied
  --> $DIR/const-traits-core.rs:51:55
   |
LL | const ASCII_CHAR_CLONE: std::ascii::Char = ASCII_CHAR.clone();
   |                                                       ^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
